[package]
name = "aqa_pseudocode"
authors = ["Jawad Ahmed <jawad.w.ahmed@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
codegen-units = 4
lto = "off"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
logos = "0.12"
